# Lernstick-Bridge

./: .docker_env  .docker_env_prod  .dockerignore  .env.example  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  README.md  TEST_SETUP.md  docker-compose-local.yml  docker-compose.yml  keylime.conf  lernstick2ima.py  lernstick2policy.py  mypy.ini  pyproject.toml  register_agent.py  requirements.txt  setup.py  setup_ca.py  setup_ca.sh  test-requirements.txt  tox.ini
docker/: Dockerfile
installation/: .docker_env  docker-compose.yml  setup_ca.sh
keylime.conf.d/: ca.conf  logging.conf  registrar.conf  verifier.conf
lernstick_bridge/: bridge_logger.py  cmd.py  config.py  exceptions.py  main.py  utils.py
lernstick_bridge/bridge/: agent.py  config.py  logic.py
lernstick_bridge/db/: crud.py  database.py  models.py
lernstick_bridge/keylime/: agent.py  ek.py  keylime_crypto.py  registrar.py  util.py  verifier.py
lernstick_bridge/routers/: agents.py  devices.py  keylime.py
lernstick_bridge/schema/: bridge.py  config.py  keylime.py
measured_boot/: README.md  lernstick2policy.py  lernstick_policy.py
tpm_cert_store/: README.md
tpm_cert_store/Microsoft/AMD/IntermediateCA/: AMD-fTPM-ECC-ICA-AERFamily-6A668AE95CA8508559C3E1D872F2417D.crt  AMD-fTPM-ECC-ICA-CRDFamily-5B401A1127EA54E3685B06D275FE8399.crt  AMD-fTPM-ECC-ICA-CZFamily-35F45AAB781751FE7C24D5EDAABAB507.crt  AMD-fTPM-ECC-ICA-GNFamily-403113170A425ABD6B04CE6BF21FD467.crt  AMD-fTPM-ECC-ICA-MDNFamily-87A9580E58935BBD40616CCF1820BEEF.crt  AMD-fTPM-ECC-ICA-RMBFamily-D30EE6F7557055BA66AD1A1DD1157D2C.crt  AMD-fTPM-ECC-ICA-RNFamily-CA6EA09EB84853EC720CD9BE5AAE73BF.crt  (+30 more)
(+192 files in other folders)
